API: Calendar rework.

--- a/modules-available/locationinfo/templates/location-info.html
+++ b/modules-available/locationinfo/templates/location-info.html
@@ -77,7 +77,7 @@
 {{#list}}
 	<tr id="row{{locationid}}" class="tablerow">
 
-		<td><div style="display:inline-block;width:{{depth}}em"></div>{{locationname}}</td>
+		<td><div style="display:inline-block;width:{{depth}}em"></div><a href="modules-available/locationinfo/frontend/doorsign.html?id={{locationid}}">{{locationname}}</a></td>
 		<td align="center">[{{locationid}}]</td>
 		<td align="center">{{#hasPcs}}{{pcState}} / {{total}}{{/hasPcs}}</td>
 
