[dozmod] Update translation of 'canLogin' in column user-/orglist

--- a/modules-available/dozmod/templates/orglist.html
+++ b/modules-available/dozmod/templates/orglist.html
@@ -10,7 +10,7 @@
 				<thead>
 					<tr>
 						<th>{{lang_organization}}</th>
-						<th><span class="glyphicon glyphicon-ok" title="{{lang_canLogin}}"></span></th>
+						<th><span class="glyphicon glyphicon-ok" title="{{lang_canLoginOrganization}}"></span></th>
 					</tr>
 				</thead>
 				<tbody>
