--- a/modules-available/dozmod/templates/userlist.html
+++ b/modules-available/dozmod/templates/userlist.html
@@ -16,7 +16,7 @@
 						<th>{{lang_email}}</th>
 						<th><span class="glyphicon glyphicon-envelope" title="{{lang_emailNotifications}}"></span></th>
 						<th><span class="glyphicon glyphicon-king" title="{{lang_superUser}}"></span></th>
-						<th><span class="glyphicon glyphicon-ok" title="{{lang_canLogin}}"></span></th>
+						<th><span class="glyphicon glyphicon-ok" title="{{lang_canLoginUser}}"></span></th>
 					</tr>
 				</thead>
 				<tbody>
