Locationinfo: Errors from the CourseBackend are now safes in the db and shown in the Admin-Panel. Refresh-button added for the servers. Install.php needs to be executed!

--- a/modules-available/locationinfo/templates/credentials.html
+++ b/modules-available/locationinfo/templates/credentials.html
@@ -16,7 +16,7 @@
   } else if("{{type}}" == "int") {
     $("#div").before('<label>{{name}}</label><br><input required type="number" name="{{name}}" value="{{value}}" form="credentialsForm"><br><br>');
   } else if("{{type}}" == "bool") {
-    $("#div").before('<label>{{name}}</label><br><input required type="checkbox" name="{{name}}" value="{{value}}" form="credentialsForm"><br><br>');
+    $("#div").before('<label>{{name}}</label><br><input type="checkbox" name="{{name}}" value="{{value}}" form="credentialsForm"><br><br>');
   } else if("{{type}}" == "array") {
     $("#div").before('<label>{{name}}</label><br>\
     <select name="{{name}}" form="credentialsForm">\
