--- a/modules-available/locationinfo/templates/location-info.html
+++ b/modules-available/locationinfo/templates/location-info.html
@@ -7,12 +7,12 @@
 
 	<table class="table table-condensed locations" style="margin-bottom:0;">
 		<tr>
-			<th width="30" style="text-align: center;" title="{{lang_serverID}}">{{lang_sID}}</th>
-			<th width="90">{{lang_serverType}}</th>
+			<th title="{{lang_serverID}}">{{lang_sID}}</th>
+			<th width="1">{{lang_serverType}}</th>
 			<th>{{lang_locationName}}</th>
 			<th>{{lang_serverUrl}}</th>
-			<th width="130" style="text-align: center;"></th>
-			<th width="80" style="text-align: center;"></th>
+			<th width="1"></th>
+			<th width="1"></th>
 		</tr>
 {{#serverlist}}
 		<form method="post" action="?do=locationinfo" id="serverForm-{{id}}">
@@ -36,11 +36,11 @@
 							<input readonly required id="input-url-{{id}}" name="url" type="text" value="{{url}}" style="padding:0;height:100%;width:100%;"></input>
 					</td>
 
-					<td align="center" id="credentials-{{id}}" onclick="event.cancelBubble = true;">
+					<td align="center" id="credentials-{{id}}" onclick="event.cancelBubble = true;" style="white-space:nowrap;">
 						<button {{#auth}}class="btn btn-sm btn-success"{{/auth}}{{^auth}}class="btn btn-sm btn-danger"{{/auth}} id="credentials-btn-{{id}}" type="button" title="credentials" onclick="loadCredentialModal({{id}},'{{name}}');">{{lang_credentials}}</button>
 						<button class="btn btn-sm btn-primary table-refresh" id="refresh-btn-{{id}}" title="refresh" onclick="refreshButtonClick({{id}});">&#8634</button>
 					</td>
-					<td align="center" id="btncell-{{id}}">
+					<td align="center" id="btncell-{{id}}" style="white-space:nowrap;">
 						<button class="btn btn-sm btn-primary table-edit" title="{{lang_edit}}" onclick="editButtonClick({{id}});" id="edit">&#x270E</button>
 						<button class="btn btn-sm btn-danger table-delete" type="button" title="{{lang_delete}}" onclick="deleteButtonClick({{id}});">&#10008</button>
 					</td>
